--- a/app/globals.css
+++ b/app/globals.css
@@ -1,43 +1,43 @@
-@import "tailwindcss";
-@import "tw-animate-css";
+@import 'tailwindcss';
+@import 'tw-animate-css';
 
 @custom-variant dark (&:is(.dark *));
 
 :root {
     --background: oklch(0.99 0 0);
-    --foreground: oklch(0.20 0 0);
+    --foreground: oklch(0.2 0 0);
     --card: oklch(0.99 0 0);
-    --card-foreground: oklch(0.20 0 0);
+    --card-foreground: oklch(0.2 0 0);
     --popover: oklch(0.99 0 0);
     --popover-foreground: oklch(0.44 0 0);
     --primary: oklch(0.83 0.13 160.91);
     --primary-foreground: oklch(0.26 0.01 166.46);
     --secondary: oklch(0.99 0 0);
-    --secondary-foreground: oklch(0.20 0 0);
+    --secondary-foreground: oklch(0.2 0 0);
     --muted: oklch(0.95 0 0);
     --muted-foreground: oklch(0.24 0 0);
     --accent: oklch(0.95 0 0);
     --accent-foreground: oklch(0.24 0 0);
     --destructive: oklch(0.55 0.19 32.73);
-    --destructive-foreground: oklch(0.99 0.00 17.21);
-    --border: oklch(0.90 0 0);
+    --destructive-foreground: oklch(0.99 0.0 17.21);
+    --border: oklch(0.9 0 0);
     --input: oklch(0.97 0 0);
     --ring: oklch(0.83 0.13 160.91);
     --chart-1: oklch(0.83 0.13 160.91);
     --chart-2: oklch(0.62 0.19 259.81);
     --chart-3: oklch(0.61 0.22 292.72);
     --chart-4: oklch(0.77 0.16 70.08);
-    --chart-5: oklch(0.70 0.15 162.48);
+    --chart-5: oklch(0.7 0.15 162.48);
     --sidebar: oklch(0.99 0 0);
     --sidebar-foreground: oklch(0.55 0 0);
     --sidebar-primary: oklch(0.83 0.13 160.91);
     --sidebar-primary-foreground: oklch(0.26 0.01 166.46);
     --sidebar-accent: oklch(0.95 0 0);
     --sidebar-accent-foreground: oklch(0.24 0 0);
-    --sidebar-border: oklch(0.90 0 0);
+    --sidebar-border: oklch(0.9 0 0);
     --sidebar-ring: oklch(0.83 0.13 160.91);
     --font-sans: Outfit, sans-serif;
-    --font-serif: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
+    --font-serif: ui-serif, Georgia, Cambria, 'Times New Roman', Times, serif;
     --font-mono: monospace;
     --radius: 0.5rem;
     --shadow-2xs: 0px 1px 3px 0px hsl(0 0% 0% / 0.09);
@@ -49,16 +49,16 @@
     --shadow-xl: 0px 1px 3px 0px hsl(0 0% 0% / 0.17), 0px 8px 10px -1px hsl(0 0% 0% / 0.17);
     --shadow-2xl: 0px 1px 3px 0px hsl(0 0% 0% / 0.43);
     --tracking-normal: 0.025em;
-  }
+}
 
-  .dark {
+.dark {
     --background: oklch(0.18 0 0);
     --foreground: oklch(0.93 0.01 255.51);
-    --card: oklch(0.20 0 0);
+    --card: oklch(0.2 0 0);
     --card-foreground: oklch(0.93 0.01 255.51);
     --popover: oklch(0.26 0 0);
     --popover-foreground: oklch(0.73 0 0);
-    --primary: oklch(0.44 0.10 156.76);
+    --primary: oklch(0.44 0.1 156.76);
     --primary-foreground: oklch(0.92 0.01 167.16);
     --secondary: oklch(0.26 0 0);
     --secondary-foreground: oklch(0.99 0 0);
@@ -67,25 +67,25 @@
     --accent: oklch(0.31 0 0);
     --accent-foreground: oklch(0.99 0 0);
     --destructive: oklch(0.31 0.09 29.79);
-    --destructive-foreground: oklch(0.94 0.00 34.31);
+    --destructive-foreground: oklch(0.94 0.0 34.31);
     --border: oklch(0.28 0 0);
     --input: oklch(0.26 0 0);
-    --ring: oklch(0.80 0.18 151.71);
-    --chart-1: oklch(0.80 0.18 151.71);
+    --ring: oklch(0.8 0.18 151.71);
+    --chart-1: oklch(0.8 0.18 151.71);
     --chart-2: oklch(0.71 0.14 254.62);
     --chart-3: oklch(0.71 0.16 293.54);
     --chart-4: oklch(0.84 0.16 84.43);
     --chart-5: oklch(0.78 0.13 181.91);
     --sidebar: oklch(0.18 0 0);
     --sidebar-foreground: oklch(0.63 0 0);
-    --sidebar-primary: oklch(0.44 0.10 156.76);
+    --sidebar-primary: oklch(0.44 0.1 156.76);
     --sidebar-primary-foreground: oklch(0.92 0.01 167.16);
     --sidebar-accent: oklch(0.31 0 0);
     --sidebar-accent-foreground: oklch(0.99 0 0);
     --sidebar-border: oklch(0.28 0 0);
-    --sidebar-ring: oklch(0.80 0.18 151.71);
+    --sidebar-ring: oklch(0.8 0.18 151.71);
     --font-sans: Outfit, sans-serif;
-    --font-serif: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
+    --font-serif: ui-serif, Georgia, Cambria, 'Times New Roman', Times, serif;
     --font-mono: monospace;
     --radius: 0.5rem;
     --shadow-2xs: 0px 1px 3px 0px hsl(0 0% 0% / 0.09);
@@ -96,9 +96,9 @@
     --shadow-lg: 0px 1px 3px 0px hsl(0 0% 0% / 0.17), 0px 4px 6px -1px hsl(0 0% 0% / 0.17);
     --shadow-xl: 0px 1px 3px 0px hsl(0 0% 0% / 0.17), 0px 8px 10px -1px hsl(0 0% 0% / 0.17);
     --shadow-2xl: 0px 1px 3px 0px hsl(0 0% 0% / 0.43);
-  }
+}
 
-  @theme inline {
+@theme inline {
     --color-background: var(--background);
     --color-foreground: var(--foreground);
     --color-card: var(--card);
@@ -156,15 +156,15 @@
     --tracking-wide: calc(var(--tracking-normal) + 0.025em);
     --tracking-wider: calc(var(--tracking-normal) + 0.05em);
     --tracking-widest: calc(var(--tracking-normal) + 0.1em);
-  }
+}
 
-  body {
+body {
     letter-spacing: var(--tracking-normal);
-  }
+}
 
 @theme inline {
-    --font-sans: var(--font-geist-sans), ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-    --font-mono: var(--font-geist-mono), ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+    --font-sans: var(--font-geist-sans), ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+    --font-mono: var(--font-geist-mono), ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New', monospace;
 
     --color-background: var(--background);
     --color-foreground: var(--foreground);
@@ -380,10 +380,10 @@
     .CollapsibleContent {
         overflow: hidden;
     }
-    .CollapsibleContent[data-state="open"] {
+    .CollapsibleContent[data-state='open'] {
         animation: slideDown 300ms ease-out;
     }
-    .CollapsibleContent[data-state="closed"] {
+    .CollapsibleContent[data-state='closed'] {
         animation: slideUp 300ms ease-out;
     }
 
